feat: complete system - notification bell all screens, visitor google form integration, email approval, date filters, time/date picker red theme, remember me, eye button, staff controllers, QA report