@@ -1,126 +1,125 @@
-# Employee Pass Slip Request, Issuance and Monitoring System
-
-> OOP Final Group Project | BSIT 2nd Year | Polytechnic University of the Philippines – Santa Rosa Campus
-
----
-
-## 📋 Project Overview
-
-A desktop-based application designed to assist authorized staff and administrators in issuing official employee pass slips and monitoring employee movement during office hours. The system records employee time-out and time-in transactions, calculates the duration of time spent outside the office, and generates monitoring reports.
+# 🛡 Employee Pass Slip Request, Issuance and Monitoring System
+### PUP Santa Rosa — OOP Final Project 2026
 
 ---
 
-## 🚨 Problem Statement
+## 📋 Requirements
 
-Manual logbooks and informal procedures used by offices and campus units result in inaccurate tracking, poor monitoring, lost records, and lack of accountability for employee in-out movements during office hours.
-
----
-
-## 🎯 Objectives
-
-- Automate the issuance of employee pass slips with time-out recording
-- Implement a time-in recording system for returning employees
-- Calculate and display the duration of time spent outside the office
-- Generate daily and monthly monitoring reports
-- Provide secure role-based access for admin and staff
+| Tool | Version | Download |
+|------|---------|----------|
+| Java JDK | 21 | https://adoptium.net |
+| JavaFX SDK | 21.0.11 | https://gluonhq.com/products/javafx |
+| MySQL | 9.7+ | https://dev.mysql.com/downloads/mysql |
+| MySQL Connector/J | 9.7.0 | https://dev.mysql.com/downloads/connector/j |
+| Python | 3.8+ | https://python.org (for Visitor web form only) |
 
 ---
 
-## 👥 System Modules
+## ⚙️ Setup Steps
 
-| Module | Description |
-|--------|-------------|
-| Login | Secure staff/admin authentication |
-| Employee Management | Add, edit, delete employee records |
-| Pass Slip Issuance | Issue pass slips, auto time-out recording |
-| Time-In Recording | Record employee return |
-| Visitor Module | Separate time-in/time-out for visitors |
-| Duration Calculation | Java Time API-based computation |
-| Monitoring & Logs | Real-time and historical records |
-| Report Generation | Daily and monthly summaries |
+### 1. Clone the repository
+```
+git clone https://github.com/Hexteriaxxxxx/OOP-Final-Project.git
+cd OOP-Final-Project
+```
+
+### 2. Setup MySQL Database
+Open MySQL and run:
+```sql
+source database/schema.sql
+```
+Then run the alter script:
+```sql
+source database/alter_visitor.sql
+```
+
+### 3. Configure your database credentials
+Copy `.env.example` to `.env` and fill in your MySQL password:
+```
+DB_HOST=localhost
+DB_PORT=3306
+DB_NAME=pass_slip_db
+DB_USER=root
+DB_PASSWORD=your_password_here
+```
+
+### 4. Setup JavaFX in IntelliJ
+1. Download JavaFX SDK 21.0.11 from https://gluonhq.com/products/javafx
+2. Extract to your `Downloads` folder
+3. In IntelliJ: **File → Project Structure → Libraries**
+4. Remove old JavaFX library (if any)
+5. Click `+` → Java → navigate to `javafx-sdk-21.0.11/lib`
+6. Click OK → Apply
+
+### 5. Add VM Options
+In IntelliJ: **Edit Configurations → Modify Options → Add VM options**
+```
+--module-path "C:\Users\YOUR_USERNAME\Downloads\javafx-sdk-21.0.11\lib" --add-modules javafx.controls,javafx.fxml
+```
+> ⚠️ Replace `YOUR_USERNAME` with your actual Windows username
+
+### 6. Add MySQL Connector
+1. Download MySQL Connector/J 9.7.0
+2. Copy the `.jar` file to the `lib/` folder
+3. In IntelliJ: **File → Project Structure → Libraries → +** → add the jar
+
+### 7. Run the app
+- Click **Run** ▶️ in IntelliJ
+- Default admin login: `admin` / `admin123`
 
 ---
 
-## 🛠️ Tech Stack
+## 🌐 Visitor Online Form (Optional)
 
-| Technology | Purpose |
-|------------|---------|
-| Java API | OOP principles, validation, Date/Time API |
-| JavaFX | Forms and role-based UI screens |
-| JDBC | Record storage, retrieval, and updates |
-| MySQL | Database management |
+This allows outside visitors to submit requests via Google Forms.
+
+### Setup:
+```bash
+pip install flask flask-cors mysql-connector-python
+python visitor_server.py
+```
+
+The server will display your local IP address. Copy it and put it in the Google Apps Script.
+
+See `visitor_google_script.js` for the full Google Apps Script code.
 
 ---
 
-## 🗄️ Database Tables
+## 👥 Team Members
 
-- `User` — user_id, username, password, role
-- `Employee` — emp_id, name, department, position
-- `Pass_slip` — slip_id, emp_id, reason, time_out, time_in, duration, issued_by
-- `Activity_logs` — log_id, emp_id, action, timestamp
+| Name | Role |
+|------|------|
+| Gian Santos | Project Manager |
+| Emil Fernandez | System Analyst / JavaFX Dev |
+| Ryken Lapating | UI/UX Designer |
+| JM Delfino | UI/UX Designer |
+| Josiah Evasco | JavaFX Dev / QA |
+| Nico Ancheta | JavaFX Dev |
+| Josiah David | JavaFX Dev |
+| Yuan Paolo | JavaFX Dev |
+| Kevin Brian | Database Designer |
+| LJ Catindig | JavaFX Dev |
+| Karl | JavaFX Dev |
 
 ---
 
 ## 📁 Project Structure
-
 ```
 OOP Final Project/
 ├── src/
-│   ├── controllers/     # JavaFX Controllers
-│   ├── models/          # Java Model Classes
-│   ├── views/           # UI Logic
-│   └── utils/           # Helper Classes (DB Connection, etc.)
-├── resources/
-│   ├── fxml/            # JavaFX FXML files
-│   └── css/             # Stylesheets
+│   ├── main/
+│   │   ├── controllers/     ← JavaFX controllers
+│   │   ├── resources/fxml/  ← FXML UI files
+│   │   └── utils/           ← DBConnection, etc.
+│   ├── dao/                 ← Database access objects
+│   └── models/              ← Java model classes
 ├── database/
-│   └── schema.sql       # SQL CREATE TABLE scripts
-├── docs/                # Documentation files
-├── diagrams/            # Use Case, DFD, ERD, Class Diagrams
-├── lib/                 # External libraries (JavaFX SDK, MySQL Connector)
+│   ├── schema.sql           ← Run this first
+│   └── alter_visitor.sql    ← Run this second
+├── resources/
+│   └── visitor_form.html    ← Public visitor form
+├── visitor_server.py        ← Python bridge server
+├── visitor_google_script.js ← Google Apps Script
+├── .env.example             ← Copy to .env, add your password
 └── README.md
 ```
-
----
-
-## 👨‍💻 Team Members
-
-| Name | Role |
-|------|------|
-| Gian | Project Manager |
-| Emil | System Analyst 1 / JavaFX Dev 1 |
-| Ryken | System Analyst 2 / UI/UX Designer 2 |
-| JM | UI/UX Designer 1 |
-| Evasco | JavaFX Dev 1 / QA |
-| Nico | JavaFX Dev 2 (Controllers) |
-| Josiah | JavaFX Dev 2 / QA |
-| Yuan | JavaFX Dev 2 / JDBC Dev 2 |
-| Kevin | Database Designer |
-| LJ | JDBC Developer 1 |
-| Karl | JDBC Dev 2 / Documentation Lead |
-| Mia | Presenter / Demo Lead |
-
----
-
-## 📅 Timeline
-
-| Week | Dates | Phase |
-|------|-------|-------|
-| Week 1 | May 9–16 | Project Planning |
-| Week 2 | May 17–23 | System Analysis & Design |
-| Week 3 | May 24–30 | Backend Development |
-| Week 4 | May 31–Jun 6 | Database & Frontend |
-| Week 5 | Jun 7–13 | Documentation & Testing |
-| Week 6 | Jun 14–17 | Finalization & Presentation |
-
----
-
-## 🎓 Instructor
-
-**Engr. Emy Lou G. Alinsod**
-Object Oriented Programming (Java)
-Polytechnic University of the Philippines – Santa Rosa Campus
-
----
-
-*Presentation Date: June 17, 2026*
